<resources>
    <string name="app_name">Application</string>
    <string name="phone_number">请输入电话号码</string>
    <string name="CTCC_number">10000</string>
    <string name="delay_time">自动挂断时间(秒)</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="sixty">60</string>
    <string name="start_auto_test">开始自动测试</string>
    <string name="stop_auto_test">结束自动测试</string>
    <string name="start_manual_test">开始手动测试</string>
    <string name="auto_test">自动测试</string>
    <string name="manual_test">手动测试</string>
    <string name="settings">设置</string>
    <string name="auto_call_next_time">自动拨打下一个电话时间(秒)</string>
    <string name="auto_call_no_phone_time">无法从服务器读到数据时下次读取时间(秒)</string>
    <string name="read_url">读数据网址</string>
    <string name="write_url">写数据网址</string>
    <string name="callback_url">回拨电话网址</string>
    <string name="read_url_net">http://1.192.125.57/zx/mobile_read.aspx</string>
    <string name="write_url_net">http://1.192.125.57/zx/mobile_write.aspx</string>
    <string name="callback_url_net">http://122.114.14.118:19998/sd/mobile_huibo.aspx</string>
    <string name="save">保存</string>
    <string name="exit">退出</string>
</resources>
