<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityManualTest">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:background="@color/aliceblue"
        android:text="@string/manual_test"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/phone_number"
            />

        <EditText
            android:id="@+id/EditText_Manual_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="end"
            android:inputType="phone"
            android:text="@string/CTCC_number"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>
    <Button
        android:id="@+id/Button_Manual_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/start_manual_test" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/TextView_Manual_Info"
            android:layout_width="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="right"
            android:layout_height="match_parent"
            android:textSize="12dp" />
    </ScrollView>

</LinearLayout>